--- a/SimpleChatRoom/Base.lproj/Main.storyboard
+++ b/SimpleChatRoom/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8NG-wR-jMb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -158,11 +158,12 @@
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yUC-B0-EU3">
                                         <rect key="frame" x="315" y="5" width="50" height="50"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="c6c-W2-KXD"/>
                                             <constraint firstAttribute="width" constant="50" id="u88-Ye-VRp"/>
                                         </constraints>
-                                        <state key="normal" title="Button" image="ic_send"/>
+                                        <state key="normal" image="ic_insert_photo"/>
                                         <connections>
                                             <action selector="didTapSendButton:" destination="8NG-wR-jMb" eventType="touchUpInside" id="L3N-Nv-Gtu"/>
                                         </connections>
@@ -280,6 +281,7 @@
                         <viewLayoutGuide key="safeArea" id="KT6-sy-Qod"/>
                     </view>
                     <connections>
+                        <outlet property="btnSend" destination="yUC-B0-EU3" id="r0t-Re-9D1"/>
                         <outlet property="tableView" destination="hJI-N0-6eX" id="h0t-bk-Pgx"/>
                         <outlet property="txtMessage" destination="dlj-Sg-GVe" id="2SW-DP-70S"/>
                     </connections>
@@ -290,7 +292,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ic_send" width="630" height="630"/>
+        <image name="ic_insert_photo" width="48" height="48"/>
         <image name="message-icon" width="1600" height="1200"/>
     </resources>
 </document>
