--- a/SimpleChatRoom/Base.lproj/Main.storyboard
+++ b/SimpleChatRoom/Base.lproj/Main.storyboard
@@ -154,7 +154,7 @@
                                         </constraints>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yUC-B0-EU3">
                                         <rect key="frame" x="315" y="5" width="50" height="50"/>
