Implement chat function

--- a/SimpleChatRoom/Base.lproj/Main.storyboard
+++ b/SimpleChatRoom/Base.lproj/Main.storyboard
@@ -192,6 +192,7 @@
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dqhieu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fms-vC-yQ4">
                                                     <rect key="frame" x="15" y="11" width="345" height="25"/>
+                                                    <color key="backgroundColor" red="0.18821030855178833" green="0.18824970722198486" blue="0.18820786476135254" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="he8-qY-Wjv"/>
                                                     </constraints>
@@ -201,6 +202,7 @@
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lg-qA-IeX">
                                                     <rect key="frame" x="15" y="41" width="360" height="24"/>
+                                                    <color key="backgroundColor" red="0.18821030859999999" green="0.1882497072" blue="0.18820786480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -217,6 +219,7 @@
                                                 <constraint firstItem="7lg-qA-IeX" firstAttribute="top" secondItem="fms-vC-yQ4" secondAttribute="bottom" constant="5" id="tHF-k9-IBd"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.18821030855178833" green="0.18824970722198486" blue="0.18820786476135254" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="lblMessage" destination="7lg-qA-IeX" id="QpL-XQ-EYT"/>
                                             <outlet property="lblUsername" destination="fms-vC-yQ4" id="cUr-qC-DPx"/>
